...
import { Colors } from "@/constants/theme";
import { SGW_CENTER, LOY_CENTER } from "@/constants/campusCenters";

interface Props {
  mapRef: React.RefObject<MapView | null>;
  viewRegion: Region;
  setCurrCampus: React.Dispatch<React.SetStateAction<"SGW" | "LOY">>;
}

enum Campus {
  Loyola = 0,
  SGW = 1,
}
...
        borderRadius={10}
        hasPadding
        options={[
          { label: "LOY", value: Campus.Loyola },
          { label: "SGW", value: Campus.SGW },
        ]}
        testID="campus-toggle-selector"
        accessibilityLabel="campus-toggle-selector"
        onPress={focusCampusOnPress}
      />
    </View>
  );
}
...
