appId: host.exp.exponent
---
- runFlow:
    when:
      notVisible:
        id: "building-selection"
    file: ../openLink.yaml
- assertVisible:
    id: "campus-toggle-selector"
- tapOn: "SGW"
- tapOn: "POI filters"
- assertVisible: "POI Settings"
# Swipe UP sets the slider to the middle (500m)
- swipe:
    from:
      id: "radius-slider"
    direction: UP
- tapOn: "SGW"
- assertVisible:
    # McKibbin’s
    id: "marker-ChIJU3alcmoayUwRHw9ZVSUzjzc"
- tapOn: "POI filters"
- assertVisible: "POI Settings"
# Swipe RIGHT sets the slider all the way to the right (1000m)
- swipe:
    from:
      id: "radius-slider"
    direction: RIGHT
- tapOn: "SGW"
- assertVisible:
    # Missinput
    id: "marker-ChIJ100L6PsbyUwR5gVPepmpyQM"
